fixed jumping words

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -342,3 +342,12 @@ main.home{
     font-size: 36px;
     text-align:center;
 }
+ul.posts-home{
+    position: absolute;
+    top:40%;
+    left: 70%;
+}
+
+main.home{
+    position:relative;
+}
